fix style tab active and dark mode

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -138,8 +138,11 @@ p {
     --color-bg-aside : #353535;
     // area expanded aside
     --color-bg-aside-expanded: #272727;
+    --color-text-tab : #8478A6;
 
     // --color-bg-tab
+    --color-bg-tab : #404040;
+    --color-text-tab : #E1C08C;
   }
   
 
